--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "lint": "eslint --fix"
+    "lint": "eslint --fix",
+    "server": "ts-node --project server/tsconfig.json server/index.ts"
   },
   "dependencies": {
     "@tweenjs/tween.js": "25.0.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@vueuse/core": "13.3.0",
     "axios": "1.9.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "mousetrap": "1.6.5",
     "pixi.js": "8.9.2",
     "ulidx": "^2.4.1",
@@ -20,6 +25,7 @@
   },
   "devDependencies": {
     "@types/mousetrap": "1.6.15",
+    "@types/node": "^24.0.3",
     "@types/uuid": "10.0.0",
     "@typescript-eslint/eslint-plugin": "8.33.0",
     "@typescript-eslint/parser": "8.33.0",
@@ -33,11 +39,12 @@
     "fp-ts": "2.16.10",
     "prettier": "3.5.3",
     "sass": "1.89.1",
+    "ts-node": "^10.9.2",
     "typescript": "5.8.3",
     "unocss": "66.1.3",
     "vite": "6.3.5",
     "vite-plugin-html": "3.2.2",
     "vue-eslint-parser": "^10.1.3"
   },
-  "packageManager": "pnpm@10.11.0"
+  "packageManager": "pnpm@9.1.2"
 }
